# dnf5

dnf5-plugins/copr_plugin/: CMakeLists.txt  copr.cpp  copr.hpp  copr_debug.cpp  copr_enable.cpp  copr_list.cpp  copr_repo.cpp  copr_repo.hpp  json.cpp  json.hpp  os_release.cpp
